chore: Fixed top alignment of card copy on mobile
Fixed top alignment of card copy on mobile

--- a/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -285,6 +285,8 @@
 
   @include mq($until: tablet) {
     padding: 10px 20px 20px;
+    top: 0;
+    transform: translateY(0);
   }
 
   @include mq($until: phablet) {
@@ -616,6 +618,7 @@
 
   img:nth-child(2) {
     left: 55px;
+    bottom: -130px;
 
     @include mq($until: tablet) {
       position: static;
